--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h3>Big black cocks is getting even bigger and bigger!<br>
                 We have had the chance to speak with a bbc farmer<br>
                 in kentucky, here is the interview</h3>
-            <img src="C:\Scripting\Hemsidor\black.jpg">
+            <img src="black.jpg">
             <h4>It was thursday the third of august when the farmer<br>
             John realized the eggs got bigger and bigger everyday.<br> <br>
 
