--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <title>Österbybruk</title>
         </head>
         <body>
-            <img src="C:\Scripting\Hemsidor\bbc.png">
+            <img src="bbc.png">
             <h1>Big Black Cock News</h1>
             <h2>BREAKING NEWS:</h2>
             <h3>Big black cocks is getting even bigger and bigger!<br>
