--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
             the cocks are getting bigger it is believed that it's gonna<br>
             balance out and not crash the global economy." Says John<br>
             The stocks in the big black cocks companies has rosen with over 200%</h4>
+            <img src="egg.jpg">
         </body>
     </html>
