--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
             job which means there will be more competition, but since<br>
             the cocks are getting bigger it is believed that it's gonna<br>
             balance out and not crash the global economy." Says John<br>
-            The stocks in the big black cocks companies has rosen with over 200%</h4>
+            <br>
+            The stocks in the big black cocks companies has rosen with over 200k<br>
+            and it is believed that even when the big black cock has risen it will<br>
+            still rise, so investors believe that it is still very buyable.
+                <br>
+            We asked that guy with white beard that is the boss at kfc and<br>
+            this is what he had to say.<br>
+            -Well about the big black cock situation! We have yet to think but, it<br>
+            is possible that big black cock soon will be on the menu.<br>
+            <br>
+            <h8>Article written by Manfreed Wendin 19/8 21
+            </h4>
             <img src="egg.jpg">
         </body>
     </html>
