--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=devicewidth, initial-scale=1">
-            <title>Österbybruk</title>
+            <title>BBC News</title>
         </head>
         <body>
             <img src="bbc.png">
